Fix spacing consistency

--- a/_sass/_base.sass
+++ b/_sass/_base.sass
@@ -36,7 +36,7 @@ a
 
 =group-lg
   .group
-    padding-bottom: 3rem
+    padding-bottom: 4rem
 
   .group-heading
     font-size: $text-h3
